# optisocks5

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
csrc/: module.cpp  socks5_codec.cpp  socks5_codec.hpp
examples/: async_connect.py  async_server.py  curl_through.py  proxy_test.py  selector_connect.py  server_metered.py
src/optisocks5/: __init__.py  _core.pyi  cli.py
src/optisocks5/aio/: __init__.py  client.py
src/optisocks5/core/: __init__.py  codec.py  session.py  types.py
src/optisocks5/server/: __init__.py  aio.py  events.py  server.py  session.py
src/optisocks5/sync/: __init__.py  client.py
tests/: test_async_server.py  test_cli.py  test_codec.py  test_optimistic.py  test_server.py
